--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "gulp-rename": "~1.1.0",
     "gulp-concat": "~2.6.0",
     "gulp-jade": "~1.0.1",
-    "gulp-csscomb": "~3.0.6"
+    "gulp-csscomb": "~3.0.6",
+    "gulp-jsmin": "~0.1.5",
+    "gulp-minify-css": "~1.2.0"
   }
 }
